adding some test css and updating node modules

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Hello world! This is HTML5 Boilerplate.</h1>
 
   <script src="dist/js/bundle.js"></script>
 </body>
